--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "eas-cli": "^9.1.0",
     "expo": "~51.0.2",
+    "expo-background-fetch": "~12.0.1",
     "expo-cellular": "~6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-linking": "^6.3.1",
@@ -26,7 +27,7 @@
     "expo-network": "^6.0.1",
     "expo-sms": "^12.0.1",
     "expo-status-bar": "~1.12.1",
-    "expo-task-manager": "^11.8.1",
+    "expo-task-manager": "^11.8.2",
     "fs": "^0.0.1-security",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
